fix: sectionlist: Hovered row not visible on some gtk themes due to the global mozilla css using !important http://bugs.activestate.com/show_bug.cgi?id=100104
(integrated from komodo (trunk) change 81563 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13514 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -419,12 +419,12 @@ statusbar
 
         &(selected)
         {
-            color: ~"@{list-@{name}-item-color-selected}";
+            color: ~"@{list-@{name}-item-color-selected}" !important;
         }
 
         &(selected, focus)
         {
-            color: ~"@{list-@{name}-item-color-focus}";
+            color: ~"@{list-@{name}-item-color-focus}" !important;
         }
     }
 
